--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/img/bg_clock.jpg);
+  background-image: url(img/bg_clock.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
